fix: layout issue

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -11,6 +11,7 @@
   max-width: var(--container-max-size);
   width: 100%;
   height: 100%;
+  z-index: -2;
 }
 
 .home__header {
